<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_admin"
        tools:context=".Admin">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editQuestion"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="100dp"
            android:layout_marginStart="100dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp" android:hint="@string/editQuestion"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editAnswer_1" android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/editQuestion" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="99dp" android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="99dp" android:layout_marginRight="99dp" android:hint="@string/editAnswer_1"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editAnswer_2" android:layout_marginTop="42dp"
            app:layout_constraintTop_toBottomOf="@+id/editAnswer_1" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="98dp" android:layout_marginStart="98dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp" android:layout_marginRight="100dp" android:hint="@string/editAnswer_2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editAnswer_3" android:layout_marginTop="37dp"
            app:layout_constraintTop_toBottomOf="@+id/editAnswer_2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="99dp" android:layout_marginStart="99dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="99dp" android:layout_marginRight="99dp" android:hint="@string/editAnswer_3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editCorrectResponse" android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/editAnswer_3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="98dp" android:layout_marginStart="98dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp" android:layout_marginRight="100dp"
            android:hint="@string/editCorrectResponse"/>
    <Button
            android:text="@string/validateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/validateEditQuestion" android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/editCorrectResponse" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="148dp" android:layout_marginStart="148dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="175dp"
            android:layout_marginRight="175dp" android:layout_marginBottom="77dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="editQuizz"/>
</android.support.constraint.ConstraintLayout>