<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">
    <Button
            android:text="@string/quizz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quizz" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="186dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="161dp" android:layout_marginStart="161dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="162dp" android:layout_marginRight="162dp" android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toTopOf="@+id/admin" android:onClick="btnQuizz"/>
    <Button
            android:text="@string/admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/admin" android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@+id/quizz" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="162dp" android:layout_marginStart="162dp" android:layout_marginBottom="323dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="161dp" android:layout_marginRight="161dp" android:onClick="btnAdmin"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputName" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp" android:layout_marginBottom="62dp"
            app:layout_constraintBottom_toTopOf="@+id/quizz" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="100dp" android:layout_marginStart="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="100dp" android:layout_marginRight="100dp" android:hint="@string/username"/>
</android.support.constraint.ConstraintLayout>